--- a/styles/phone.css
+++ b/styles/phone.css
@@ -7,7 +7,9 @@
     color: #ecf0f1 !important; }
     body .container {
       padding-left: 0px;
-      padding-right: 0px; }
+      padding-right: 0px;
+      margin: 0;
+      width: 100%; }
 
   .panel.panel-default {
     border-radius: 0px; }
@@ -20,7 +22,8 @@
     margin: auto;
     top: 2px; }
     nav header h5 {
-      text-align: center; }
+      text-align: center;
+      margin: 5px 0 0 0; }
   nav #navLinks {
     display: none;
     background-color: grey;
@@ -194,6 +197,22 @@
 
   .itemSelect {
     cursor: pointer; }
+
+  #loginSection {
+    max-width: 100%;
+    padding: 0 10%; }
+    #loginSection nav {
+      width: 100%;
+      height: 80px;
+      background-color: #3498DB;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1; }
+    #loginSection form {
+      margin-top: 60px; }
+      #loginSection form label {
+        color: #686868; }
 
   #adminSection {
     width: 100%; }
