--- a/styles/phone.scss
+++ b/styles/phone.scss
@@ -318,7 +318,7 @@ nav{
 
   nav{
     width: 100%;
-    height: 50px;
+    height: 80px;
     background-color: #3498DB;
     position: fixed;
     top: 0;
@@ -345,16 +345,18 @@ nav{
       position: fixed;
       z-index: 2;
       .searchArea{
-        padding: 10px 15px;
         height: 40px;
         input{
-          height: 35px;
+          height: 30px;
           width: 80%;
+          margin: 10px 0 0 20px;
+          border-radius: 0px;
         }
         i{
           margin: 0;
           float: right;
           position: absolute;
+          top: 10px;
           right: 20px;
           font-size: 2.3em;
           color: #ecf0f1;
@@ -381,20 +383,25 @@ nav{
           height: 35px;
           border: none;
           border-bottom: 1px solid #95a5a6;
+          border-radius: 0;
+          box-shadow: none;
           font-size: 1.2em;
           margin: 10px 0;
         }
         textarea{
           border: 1px solid #95a5a6;
+          border-radius: 0;
           font-size: 1.2em;
           resize: none;
           width: 95%;
+
         }
         button{
           margin: 10px 0;
           padding: 10px 15px;
           // border: 1px solid #95a5a6;
           border: none;
+          border-radius: 0;
           font-size: 1.2em;
         }
       }
@@ -405,7 +412,7 @@ nav{
     // Info From Database
     .repeatContainer{
       color: #34495e;
-      padding-top: 65px;
+      padding-top: 50px;
       article{
         margin-top: 15px;
         padding: 0 15px;
@@ -415,7 +422,7 @@ nav{
         i{
           position: absolute;
           right: 15px;
-          font-size: 2em;
+          font-size: 1.7em;
         }
         h2{
           font-size: 1.3em;
@@ -479,7 +486,9 @@ nav{
         height: 30px;
         background-color: transparent;
         border: none;
+        border-radius: 0;
         border-bottom: 2px solid #34495e;
+        box-shadow: none;
         font-size: 1.3em;
         color: #34495e;
         padding-left: 1.5%;
@@ -487,6 +496,7 @@ nav{
       }
       textarea{
         border: 2px solid #34495e;
+        border-radius: 0;
         margin: 15px 0 0 0;
         resize: none;
         width: 80%;
@@ -503,6 +513,7 @@ nav{
           font-size: 1.2em;
           background-color: #3498DB;
           border: none;
+          border-radius: 0;
           padding: 10px 15px;
           color: #ecf0f1;
         }
